syntax = "proto3";

package DataPlane;

enum IfaceType {
    IFACE_ETH = 0;
}

message Iface {
    string id = 1;
    IfaceType type = 2;
}
